[gd_scene load_steps=3 format=3 uid="uid://cdemohud01"]

[ext_resource type="Script" path="res://scripts/ui/demo_hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.05, 0.08, 0.75)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0

[node name="DemoHUD" type="CanvasLayer"]
layer = 15
script = ExtResource("1_hud")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -110.0
offset_right = 180.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StepLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Step 0 / 15"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="ProgressBar" type="ProgressBar" parent="Panel/VBox"]
layout_mode = 2
max_value = 15.0
show_percentage = false
custom_minimum_size = Vector2(0, 8)

[node name="EffectLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = ""
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14
modulate = Color(0.4, 0.9, 0.4, 1)

[node name="HintLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Press Escape to stop"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 11
modulate = Color(1, 1, 1, 0.5)
